feat: 인증 주체 역할 기반 인터셉터 추가 및 관련 로직 개선